Finish Mas Parameters; add TOCs

--- a/New/Makefile
+++ b/New/Makefile
@@ -1,7 +1,7 @@
 HTML := $(patsubst %.rst,%.html,$(wildcard *.rst))
 
 %.html:	%.rst
-	pandoc --eol=lf $< -f rst -t html5 --template vista.html5 -o $@
+	pandoc --toc --eol=lf $< -f rst -t html5 --template vista.html5 -o $@
 all: $(HTML)
 clean:
 	rm *.html
